# HPG-MxP

./: .clang-format  .cmake-format.py  .pre-commit-config.yaml  AUTHORS  CMakeLists.txt  COPYRIGHT  INSTALL  INSTALL.md  LICENSE  README.md  contributors.txt
.github/workflows/: default_build.yaml  pre_commit.yaml
doc/: install.md  run.md
src/: BenchGMRES.cpp  BenchGMRES.hpp  CheckAspectRatio.cpp  CheckAspectRatio.hpp  CheckProblem.cpp  CheckProblem.hpp  ComputeDotProduct.cpp  ComputeDotProduct.hpp  ComputeDotProduct_blas.cpp  ComputeDotProduct_gpu.cpp  ComputeDotProduct_ref.cpp  ComputeDotProduct_ref.hpp  ComputeGEMMT.cpp  ComputeGEMMT.hpp  ComputeGEMMT_gpu.cpp  ComputeGEMMT_ref.cpp  ComputeGEMMT_ref.hpp  ComputeGEMV.cpp  ComputeGEMV.hpp  ComputeGEMVT.cpp  ComputeGEMVT.hpp  ComputeGEMVT_blas.cpp  ComputeGEMVT_gpu.cpp  ComputeGEMVT_ref.cpp  ComputeGEMVT_ref.hpp  ComputeGEMV_blas.cpp  ComputeGEMV_gpu.cpp  ComputeGEMV_ref.cpp  ComputeGEMV_ref.hpp  ComputeGS_Forward.cpp  ComputeGS_Forward.hpp  ComputeGS_Forward_gpu.cpp  ComputeGS_Forward_ref.cpp  ComputeGS_Forward_ref.hpp  ComputeMG.cpp  ComputeMG.hpp  ComputeMG_ref.cpp  ComputeMG_ref.hpp  ComputeOptimalShapeXYZ.cpp  ComputeProlongation_gpu.cpp  (+133 more)
tools/: parse_benchmark_output.py  plot_scaling.py  plot_speedups.py  plot_stacked_breakdown.py  plot_time_pie.py
unittesting/: CMakeLists.txt  basic_main.cpp  dot.cpp  gs_multicolor.cpp  multicoloring.cpp  simulate_halos.hpp  test_ginkgo.cpp  test_spmv.cpp  testbase.hpp
unittesting/Geometry/: main.cpp
unittesting/hpcg_dat/: main.cpp
unittesting/yaml_output/: main.cpp
